--- a/src/components/login-form/LoginForm.scss
+++ b/src/components/login-form/LoginForm.scss
@@ -43,13 +43,13 @@
     display: flex;
     justify-content: center;
     // align-items: center;
-    margin-top: 12%;
     font-family: "Inter", sans-serif;
     padding: 0px 10rem;
     background-color: #fff;
 
     .login-form {
       width: 500px;
+      margin-top: 250px;
     }
 
     .header-image {
