--- a/src/layouts/side-nav-inner-toolbar/side-nav-inner-toolbar.scss
+++ b/src/layouts/side-nav-inner-toolbar/side-nav-inner-toolbar.scss
@@ -4,8 +4,10 @@
 
 #navigation-header {
   @import "../../themes/generated/variables.additional.scss";
-  background-color: $base-accent;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  // background-color: $base-accent;
+  // box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  margin-bottom: 15px;
+  margin-top: 20px;
 
   .menu-button .dx-icon {
     color: $base-text-color;
@@ -18,5 +20,8 @@
   .dx-theme-generic & {
     padding-top: 10px;
     padding-bottom: 10px;
+  }
+  .header-title img {
+    margin-left: 80px;
   }
 }
