--- a/src/components/login-form/LoginForm.scss
+++ b/src/components/login-form/LoginForm.scss
@@ -137,3 +137,32 @@
     }
   }
 }
+@include md {
+  .login-container {
+    .login-container-right {
+      height: 100vh;
+      display: flex;
+      width: 0;
+      justify-content: center;
+      overflow: hidden;
+      // align-items: center;
+      img {
+        display: none;
+      }
+    }
+    .login-container-left {
+      width: 100%;
+      height: 100vh;
+      justify-content: center;
+      align-items: center;
+      font-family: "Inter", sans-serif;
+      padding: 0px 10rem;
+      background-color: #fff;
+
+      .login-form {
+        width: 100%;
+        // margin-top: 250px;
+      }
+    }
+  }
+}
