--- a/src/components/typographyText/styles.scss
+++ b/src/components/typographyText/styles.scss
@@ -1,5 +1,5 @@
 .typ-header-text {
-  color: var(--text-colour-primary-161616, #142129);
+  color: #142129;
   font-family: Inter;
   font-size: 20px;
   font-style: normal;
@@ -7,7 +7,7 @@
   line-height: 30px;
 }
 .typ-sub-text {
-  color: var(--text-colour-primary-161616, #344450);
+  color: #344450;
   font-family: Inter;
   font-size: 16px;
   font-style: normal;
@@ -15,7 +15,7 @@
   line-height: 24px;
 }
 .popup-header-text {
-  color: var(--text-colour-secondary-262626, #262626);
+  color: #344450;
   font-family: Inter;
   font-size: 18px;
   font-style: normal;
@@ -23,7 +23,7 @@
   line-height: 27px;
 }
 .form-text {
-  color: var(--text-colour-primary-161616, #142129);
+  color: #142129;
   font-family: Inter;
   font-size: 16px;
   font-style: normal;
@@ -31,7 +31,7 @@
   line-height: 24px;
 }
 .popup-sub-text {
-  color: var(--text-colour-body-525252, #525252);
+  color: #687787;
   font-family: Inter;
   font-size: 14px;
   font-style: normal;
