--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -4,10 +4,11 @@
 .header-component {
   flex: 0 0 auto;
   z-index: 1;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.12), 0 0px 1px rgba(0, 0, 0, 0.24);
 
-  .dx-toolbar .dx-toolbar-item.menu-button>.dx-toolbar-item-content .dx-icon {
-    color: $base-accent;
+  .dx-toolbar .dx-toolbar-item.menu-button > .dx-toolbar-item-content .dx-icon {
+    // color: $base-accent;
+    color: #7f56d9;
   }
 }
 
@@ -35,7 +36,7 @@
     padding: 10px 0;
   }
 
-  .user-button>.dx-button-content {
+  .user-button > .dx-button-content {
     padding: 3px;
   }
 }
