--- a/src/components/popups/send-verification.scss
+++ b/src/components/popups/send-verification.scss
@@ -23,9 +23,39 @@
   gap: 16px;
   margin-top: 50px;
 }
+
 @include sm {
   .dx-overlay-content .dx-popup-content {
     width: 290px;
     height: 250px;
+  }
+}
+.popup-input {
+  margin-top: 32px;
+}
+.full-width-button {
+  width: 100%;
+  box-sizing: border-box;
+}
+
+.popup-footer {
+  display: flex;
+  justify-content: center;
+  margin-top: 32px;
+}
+// .responsive-popup {
+//   .dx-popup-wrapper > .dx-overlay-content {
+//     width: 25%;
+//     max-width: 480px;
+//     @include sm {
+//       width: 95%;
+//     }
+//   }
+// }
+.dx-popup-wrapper > .dx-overlay-content {
+  width: 25%;
+  max-width: 480px;
+  @include sm {
+    width: 95%;
   }
 }
