--- a/src/visitorMobile/welcome/welcome.scss
+++ b/src/visitorMobile/welcome/welcome.scss
@@ -65,6 +65,7 @@
           color: #6941c6;
           font-family: inter;
           font-weight: 600;
+          cursor: pointer;
         }
       }
     }
