--- a/src/components/HeaderTab/HeaderTab.scss
+++ b/src/components/HeaderTab/HeaderTab.scss
@@ -1,44 +1,51 @@
-.HeaderTab{
-    margin-top: 24px;
-    margin-left:16px ;
-    font-family: inter;
-    .Active-Header{
-        width: 100%;
-        font-size: 20px;
-        margin-bottom: 16px;
-       
-    }
-    .dx-tab{
-        .dx-tab-text-span{
-            font-weight: 600;
-        }
-        
-        background-color: transparent !important;
-        position: relative;
-        display: inline-flex;
-        align-items: stretch;
-        justify-content: flex-end;
-       flex-basis: 0; 
-        min-width: max-content;
-        cursor: pointer;
-        padding: 12px 8px ;
+@import "../../responsive.scss";
+.HeaderTab {
+  margin-top: 24px;
+  margin-left: 16px;
+  margin-right: 16px;
+  font-family: inter;
 
-        :first-child{
-            padding-left: 0px;
-        }
+  .Active-Header {
+    width: 100%;
+    font-size: 20px;
+    margin-bottom: 16px;
+  }
+  .dx-tab {
+    .dx-tab-text-span {
+      font-weight: 600;
     }
-    .dx-tabs {
-        border-bottom: 1px solid #D9DDE1;
-        background-color: transparent;
+
+    background-color: transparent !important;
+    position: relative;
+    display: inline-flex;
+    align-items: stretch;
+    justify-content: flex-end;
+    flex-basis: 0;
+    min-width: max-content;
+    cursor: pointer;
+    padding: 12px 8px;
+
+    :first-child {
+      padding-left: 0px;
     }
-    .dx-tabs-wrapper{
-        gap: 32px;
+  }
+  .dx-tabs {
+    border-bottom: 1px solid #d9dde1;
+    background-color: transparent;
+  }
+
+  .dx-tabs-wrapper {
+    gap: 32px;
+    @include sm {
+      gap: 14px;
     }
-    .dx-tab.dx-tab-selected{
-        color: #6941C6;
-        border-bottom: #6941C6;
-    }
-    .dx-tabs-styling-mode-primary.dx-tab-indicator-position-bottom .dx-tab-selected::after{
-        background-color: #6941C6  ;
-    }
+  }
+  .dx-tab.dx-tab-selected {
+    color: #6941c6;
+    border-bottom: #6941c6;
+  }
+  .dx-tabs-styling-mode-primary.dx-tab-indicator-position-bottom
+    .dx-tab-selected::after {
+    background-color: #6941c6;
+  }
 }
