--- a/src/components/qr-code-form/QRCodeForm.scss
+++ b/src/components/qr-code-form/QRCodeForm.scss
@@ -1,6 +1,12 @@
 .qr-code {
-  img {
+  height: 183px;
+  background-color: #fcfaff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .qr-image {
     width: auto;
-    height: 183px;
+    height: 125px;
   }
 }
