add user API integration 19-june-2024 12:55

--- a/src/components/popups/send-verification.scss
+++ b/src/components/popups/send-verification.scss
@@ -24,6 +24,15 @@
   margin-top: 50px;
 }
 
+.continueBtn {
+  margin: 24px 0px;
+}
+
+// .dx-overlay-content {
+//   display: flex;
+//   justify-content: center;
+// }
+
 @include sm {
   .dx-overlay-content .dx-popup-content {
     width: 290px;
