--- a/src/visitorMobile/step3/step3.scss
+++ b/src/visitorMobile/step3/step3.scss
@@ -1,6 +1,7 @@
 .step3 {
   width: 100%;
   padding: 8px 16px;
+
   .backbtn {
     height: 44px;
     width: 44px;
@@ -37,28 +38,118 @@
       }
     }
   }
+
   .picture {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &.fullscreen {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: black;
+      z-index: 9999;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .imgcapture {
+      height: 100%;
+      width: 100%;
+      margin-bottom: 40px;
+      justify-content: center;
+      img{
+        border-radius: 8px;
+      }
+    }
+
     .captureBtn {
       width: 100%;
       display: flex;
       flex-direction: column;
       gap: 16px;
     }
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
     .clickBtn {
       background-color: white;
       color: #344450;
       box-shadow: none;
       border: 1px solid #4e5d6b;
     }
-    .imgcature {
-      height: 160px;
-      width: 141px;
-      border: 1px solid black;
-      margin-bottom: 40px;
-    }
   }
+}
+.imgcapture {
+  display: flex;
+  justify-content: center;
+}
+
+.video-wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.video-wrapper video {
+  width: 100%;
+  height: auto;
+}
+
+.photo-button {
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  bottom: 2rem; /* 2rem space from the bottom */
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+.circle {
+  position: absolute;
+  top: 15%;
+  left: 15%;
+  bottom: 15%;
+  right: 15%;
+  border-radius: 100%;
+  background-color: white;
+  opacity: 0;
+}
+
+.ring {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  border-radius: 100%;
+  border: 0.2em solid white;
+  opacity: 0.8;
+}
+
+.photo-button .circle,
+.photo-button .ring {
+  transition: all 0.25s;
+}
+
+.photo-button:hover .circle {
+  opacity: 1;
+}
+
+.photo-button:active .ring {
+  opacity: 1;
+}
+
+.photo-button:active .circle {
+  opacity: 0.5;
 }
