--- a/src/pages/user-configurations/user's-profile/user-profile.scss
+++ b/src/pages/user-configurations/user's-profile/user-profile.scss
@@ -4,3 +4,25 @@
     color: #344450;
   }
 }
+.on-hover-data {
+  .dx-row.dx-data-row {
+    .dx-link.dx-link-edit.dx-icon-edit.dx-link-icon {
+      display: none;
+      transition: 0.2s;
+    }
+    .dx-link.dx-link-delete.dx-icon-trash.dx-link-icon {
+      display: none;
+      transition: 0.2s;
+    }
+    &:hover {
+      .dx-link.dx-link-edit.dx-icon-edit.dx-link-icon {
+        display: inline-block;
+        opacity: 1;
+      }
+      .dx-link.dx-link-delete.dx-icon-trash.dx-link-icon {
+        display: inline-block;
+        opacity: 1;
+      }
+    }
+  }
+}
