Added Verify user , mobile visitor

--- a/src/pages/verify-visitor/verify-visitor.scss
+++ b/src/pages/verify-visitor/verify-visitor.scss
@@ -75,3 +75,14 @@
     gap: 0px;
   }
 }
+
+.Myloader{
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  z-index: 999999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #3444503c;
+}
