--- a/src/visitorMobile/checkStatus/checkstatus.scss
+++ b/src/visitorMobile/checkStatus/checkstatus.scss
@@ -1,6 +1,7 @@
 .CheckStatus {
-  width: 100%;
   padding: 8px 16px;
+  width: 100%;
+  background-color: white;
   font-family: inter;
   .backbtn {
     height: 44px;
