--- a/src/visitorMobile/AfterApproval/afterApproval.scss
+++ b/src/visitorMobile/AfterApproval/afterApproval.scss
@@ -1,7 +1,8 @@
 .AfterApproval{
     font-family: inter;
-    margin: 8px 16px;
+    padding: 8px 16px;
     width: 100%;
+    background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
