--- a/src/visitorMobile/OtpVerify/checkinotp.scss
+++ b/src/visitorMobile/OtpVerify/checkinotp.scss
@@ -1,8 +1,9 @@
 .main-form-container {
   display: flex;
   flex-direction: column;
-  margin: 8px 16px;
+  padding: 8px 16px;
 
+  background-color: white;
   .backbtn {
     margin-bottom: 12px;
   }
