--- a/src/visitorMobile/checkout/checkout.scss
+++ b/src/visitorMobile/checkout/checkout.scss
@@ -1,6 +1,7 @@
 .Checkout {
-  margin: 8px 16px;
+  padding: 8px 16px;
   width: 100%;
+  background-color: white;
   .backbtn {
     height: 44px;
     width: 44px;
