--- a/src/pages/generalSetting/generalsetting.scss
+++ b/src/pages/generalSetting/generalsetting.scss
@@ -1,7 +1,12 @@
-.GeneralSetting{
-    .header-container{
-        font-size: 20px;
-        border-bottom: 1px solid #D9DDE1;
-        padding-bottom: 24px;
-    }
+.GeneralSetting {
+  .header-container {
+    font-size: 20px;
+    border-bottom: 1px solid #d9dde1;
+    padding-bottom: 24px;
+  }
+}
+#gridContainer {
+  .dx-datagrid .dx-link {
+    color: #344450;
+  }
 }
