--- a/src/pages/user-configurations/add-user/add-user.scss
+++ b/src/pages/user-configurations/add-user/add-user.scss
@@ -1,3 +1,5 @@
+@import "../../../responsive.scss";
+
 .add-user-form {
   display: flex;
   flex-wrap: wrap;
@@ -10,6 +12,13 @@
     .dx-texteditor-input-container {
       width: 100%;
       height: 56px;
+    }
+  }
+  @include sm {
+    gap: 0;
+    .form-input {
+      flex: 1 1 100%;
+      max-width: 100%;
     }
   }
 }
