--- a/src/pages/user-configurations/user-settings.scss
+++ b/src/pages/user-configurations/user-settings.scss
@@ -1,26 +1,28 @@
-// .tab-panel {
-//   .dx-tab {
-//     gap: 4px;
-//     padding: 12px 16px;
-//     background-color: transparent;
-//     color: rgba(0, 0, 0, 0.54);
-//   }
-//   .dx-tabs {
-//     padding: 0;
-//     background-color: transparent;
-//     -webkit-user-select: none;
-//     -moz-user-select: none;
-//     user-select: none;
-//     -webkit-touch-callout: none;
-//     position: relative;
-//     display: flex;
-//     width: 100%;
-//   }
-//   .dx-tab .dx-tab-text {
-//     text-transform: none;
-//     font-size: 14px;
-//     font-weight: 500;
-//     font-family: Inter;
-//     // color: #687787;
-//   }
-// }
+@import "../../responsive.scss";
+.content-block {
+  .tab-panel {
+    .dx-tabpanel-tabs {
+      display: flex;
+      overflow-x: auto;
+      white-space: nowrap;
+      -webkit-overflow-scrolling: touch;
+
+      @include sm {
+        overflow-x: scroll;
+      }
+
+      .dx-item {
+        display: inline-block;
+        padding: 10px;
+      }
+    }
+
+    .dx-tabpanel-content {
+      padding: 16px;
+
+      @include sm {
+        padding: 8px;
+      }
+    }
+  }
+}
