--- a/src/pages/user-configurations/authorize-user/user-authorization.scss
+++ b/src/pages/user-configurations/authorize-user/user-authorization.scss
@@ -2,7 +2,7 @@
   margin-top: 32px;
 }
 .dx-popup-wrapper > .dx-overlay-content {
-  width: 50%;
+  // width: 50%;
   max-width: none;
 }
 .auth-title-section {
