--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -90,6 +90,7 @@
       display: flex;
       gap: 24px;
       flex-wrap: wrap;
+      padding-bottom: 16px;
       @include md {
         flex-wrap: wrap;
       }
