--- a/src/visitorMobile/welcomeDetails/step1.scss
+++ b/src/visitorMobile/welcomeDetails/step1.scss
@@ -20,6 +20,7 @@
       font-family: pompiere;
       font-size: 16px;
       color: #687787;
+      margin-bottom: 8px;
     }
 
     .welcome-text {
