--- a/src/visitorMobile/checkStatus/checkstatus.scss
+++ b/src/visitorMobile/checkStatus/checkstatus.scss
@@ -20,6 +20,7 @@
       height: 30px;
       :first-child {
         font-size: 20px;
+        font-weight: 500;
         color: #344450;
       }
       :nth-child(2) {
@@ -55,6 +56,7 @@
       }
     }
     .pending{
+      margin-bottom: 6px;
       height: 240px;
       width: 240px;
       img{
